--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <name>reflection</name>
             <url>https://mvnrepository.com/artifact/org.reflections/reflections/0.9.12</url>
         </repository>
+        <repository>
+            <id>jda</id>
+            <name>jda</name>
+            <url>https://bintray.com/dv8fromtheworld/maven/JDA/4.2.0_209</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -38,6 +43,11 @@
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.dv8tion</groupId>
+            <artifactId>JDA</artifactId>
+            <version>4.2.0_209</version>
         </dependency>
     </dependencies>
 </project>
